test/functions/hilde/duplicateExports.good
duplicateExports.chpl:8: error: The name foo cannot be exported twice from the same compilation unit.
